# bazel-testing

./: BUILD.bazel  WORKSPACE  package-lock.json  package.json  test.ts  tsconfig.json
libs/one/: BUILD
libs/two/: BUILD  index.ts
