package(default_visibility = ["//visibility:public"])
exports_files(["tsconfig.json"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "app",
    srcs = ["test.ts"],
    deps = ["//libs/two"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")

rollup_bundle(
    name = "bundle",
    entry_point = "test.js",
    deps = [":app"],
)
